fixed some error
