# swagger.json
@@ -117,6 +117,12 @@
           "201": {
             "description": "Created"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -154,7 +160,7 @@
         }
       }
     },
-    "/books/{bookId}": {
+    "/books/{id}": {
       "get": {
         "tags": [
           "Books"
@@ -162,7 +168,7 @@
         "description": "",
         "parameters": [
           {
-            "name": "bookId",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
@@ -179,7 +185,9 @@
             "description": "Internal Server Error"
           }
         }
-      },
+      }
+    },
+    "/books/{bookId}": {
       "put": {
         "tags": [
           "Books"
@@ -218,8 +226,14 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
@@ -242,6 +256,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
